sandbox/output
ParserWithDelimiterNewLineOrComma.java:3: error: cannot find symbol
    public List<String> parse(String string) {
           ^
  symbol:   class List
  location: class ParserWithDelimiterNewLineOrComma
ParserWithDelimiterNewLineOrComma.java:4: error: cannot find symbol
        return Arrays.asList(string.split("\\s*[,|\\n]\\s*"));        
               ^
  symbol:   variable Arrays
  location: class ParserWithDelimiterNewLineOrComma
StringCalculatorTest.java:8: error: method add in class StringCalculator cannot be applied to given types;
        assertEquals(0, StringCalculator.add(""));
                                        ^
  required: String,StringCalculatorParser
  found: String
  reason: actual and formal argument lists differ in length
3 errors
